# jobscout

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  arbeitnow_jobs.json  lesson02_tool_use_TZ.md  pyproject.toml
data/: parse_results.jsonl
data/jobs_raw/: Backend Engineer.txt  Lead Backend Software Engineer (Product API).txt  Remote Lead AI Engineer & Technical Architect.txt  Remote Product Engineer.txt  Senior Backend Engineer (almost no info).txt  Senior Full Stack Developer.txt  Senior Software Engineer.txt  Software Engineer 2.txt  Software Engineer 3.txt  Software Engineer.txt  Staff Software Engineer, Product.txt  Staff Software Engineer.txt
evals/lesson01_parser/: ITERATIONS.md  ground_truth.jsonl  run.py
evals/lesson01_parser/results/baseline/: results.jsonl
evals/lesson01_parser/results/v2_must_have_cleanup/: results.jsonl
evals/lesson01_parser/results/v3_alternatives/: results.jsonl
evals/lesson01_parser/results/v4_specificity/: results.jsonl
evals/lesson02_agent/: ITERATIONS.md  run.py
evals/lesson02_agent/results/v1_baseline/: results.jsonl  summary.json  traces.jsonl
evals/lesson02_agent/results/v2_arbeitnow_no_remote_filter/: results.jsonl  summary.json  traces.jsonl
scripts/: run_arbeitnow.py  run_remotive.py
src/jobscout/: config.py  llm.py  pricing.py  schemas.py
src/jobscout/agents/: job_finder.py  types.py
src/jobscout/parsers/: job_parser.py  types.py
src/jobscout/prompts/: __init__.py
src/jobscout/tools/: arbeitnow.py  extract_job.py  registry.py  remotive.py  types.py
(+7 files in other folders)
